# spark-connect-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/spark_connect_mcp/: __init__.py  __main__.py  dataframes.py  entrypoints.py  preflight.py  server.py  session.py  sql_guard.py
src/spark_connect_mcp/connectors/: __init__.py  base.py  databricks.py  spark.py
src/spark_connect_mcp/tools/: __init__.py  catalog.py  dataframes.py  exec.py  lazy.py  session.py  write.py
tests/: test_catalog_tools.py  test_connectors.py  test_dataframe_tools.py  test_dataframes.py  test_entrypoints.py  test_exec_tools.py  test_lazy_tools.py  test_preflight.py  test_scaffold.py  test_server_boot.py  test_session.py  test_session_tools.py  test_sql_guard.py  test_write_tools.py
tests/integration/: test_preflight_integration.py
