[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spark-connect-mcp"
version = "0.1.0"
description = "MCP server exposing Apache Spark Connect (and Databricks Connect) via DataFrame and SQL tools for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "IceRhymers" },
]

dependencies = [
    "mcp[cli]",
    "pyspark[connect]>=3.5",
]

[project.optional-dependencies]
databricks = [
    "databricks-connect>=18.0",
]

[project.scripts]
spark-connect-mcp = "spark_connect_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_connect_mcp"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by ruff format

[tool.mypy]
python_version = "3.12"
files = ["src/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
