[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spark-connect-mcp"
version = "0.2.0"
description = "MCP server exposing Apache Spark Connect (and Databricks Connect) via DataFrame and SQL tools for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "IceRhymers" },
]

dependencies = [
    "mcp[cli]",
    "sqlglot>=26.0",
]

[project.optional-dependencies]
spark = [
    "pyspark[connect]>=3.5",
]
databricks = [
    "databricks-connect==18.0.5",
]

[project.scripts]
spark-connect-mcp = "spark_connect_mcp.server:main"
databricks-connect-mcp = "spark_connect_mcp.entrypoints:databricks_main"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_connect_mcp"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.lint.isort]
known-first-party = ["spark_connect_mcp"]

[tool.mypy]
python_version = "3.12"
files = ["src/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pyspark.*", "databricks.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration' --ignore=tests/integration"
markers = [
    "integration: marks tests as integration tests (require external services)",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
